--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Material Design for Bootstrap</title>
+  <title>Quotation Generator</title>
   <!-- MDB icon -->
   <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
   <!-- Font Awesome -->
@@ -18,12 +19,15 @@
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-  <!-- Start your project here-->  
+  <!-- Start your project here-->
   <div style="height: 100vh">
     <div class="flex-center flex-column">
-      <h1 class="text-hide animated fadeIn mb-4" style="background-image: url('https://mdbootstrap.com/img/logo/mdb-transparent-250px.png'); width: 250px; height: 90px;">MDBootstrap</h1>
+      <h1 class="text-hide animated fadeIn mb-4"
+        style="background-image: url('https://mdbootstrap.com/img/logo/mdb-transparent-250px.png'); width: 250px; height: 90px;">
+        MDBootstrap</h1>
       <h5 class="animated fadeIn mb-3">Thank you for using our product. We're glad you're with us.</h5>
       <p class="animated fadeIn text-muted">MDB Team</p>
     </div>
@@ -42,4 +46,17 @@
   <script type="text/javascript"></script>
 
 </body>
+
 </html>
+<script>
+ const quoteGenerator = () => {
+  let begin = ["To live is to suffer", "He who", "That which"];
+  let middle = ["to survive is to find","has a why to live ","does not kill us"];
+  let end = ["some meaning in the suffering.","can bear almost any how.","makes us stronger."];
+  
+  for(let i in end){
+  console.log(begin[i] + ' ' + middle[i] + ' ' + end[i] + '.');
+}
+}
+quoteGenerator();
+</script>
