added category quotes

--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
 
         <!--Trigger-->
         <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">Dropdown primary</button>
+          aria-haspopup="true" aria-expanded="false">Select Quote Category</button>
 
 
         <!--Menu-->
         <div class="dropdown-menu dropdown-primary">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">Nietzsche Quotes</a>
+          <a class="dropdown-item" href="#">Popular Quotes</a>
+          <a class="dropdown-item" href="#">Morning Quotes</a>          
         </div>
       </div>
       <!--/Dropdown primary-->
