added border color around id select

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="container row">
         <div class="col-md-6">
-          <select id="select" class="mdb-select md-form" onchange="newQuote()">
+          <select id="select" class="mdb-select md-form border-success" onchange="newQuote()">
             <option value="" disabled selected>Choose Quote Category</option>
             <option value="Nietzsche">Nietzsche Quotes</option>
             <option value="Morning">Morning Quotes</option>
