--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <script type="text/javascript" src="js/mdb.min.js"></script>
   <!-- Your custom scripts (optional) -->
   <script type="text/javascript" src="quote.js"></script>
+  <script type="text/javascript" src="newQuote.js"></script>
 
 </body>
 
