--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
             <option value="Morning">Morning Quotes</option>
             <option value="Popular">Popular Quotes</option>
           </select>
+          <select id="select-1" class="mdb-select md-form border-success" onchange="newQuote()">
+            <option value="" disabled selected>Choose Number of Quotes</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+          </select>
         </div>
         <div class="col-md-6"><button class="btn-success float-right" onclick="newQuote()">New Quote</button></div>
       </div>
