added refresh button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container border border-success  flex-center flex-column">
       <h1 class="animated fadeIn mb-4">
         Quotation Generator</h1>
-      <h3 id="popQ">Popular Quote</h3>
+      <h3 id="popQ"></h3>
       <div id="quote-display" class="border border-success">
 
 
@@ -50,7 +50,7 @@
             <option value=5>5</option>
           </select>
         </div>
-        <div class="col-md-6"><button class="btn-success float-right" onclick="newQuote()">New Quote</button></div>
+        <div class="col-md-6"><button class="btn-success float-right" onclick="newQuote()">New Quote</button><button class="btn-success float-right" onclick="location.reload()">Refresh</button></div>
       </div>
     </div>
   </div>
