--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <option value=5>5</option>
           </select>
         </div>
-        <div class="col-md-3"><button class="btn-success" onclick="newQuote()">New Quote</button></div>
-        <div class="col-md-3"><button class="btn-success" onclick="location.reload()">Refresh</button></div>
+        <div class="col-md-3" style="padding-top:  20px;" ><button class="btn-success" style="display:block; margin: auto; ;" onclick="newQuote()">New Quote</button></div>
+        <div class="col-md-3" style="padding-top:  20px;"><button class="btn-success" style="display:block; margin: auto;" onclick="location.reload()">Refresh</button></div>
       </div>
     </div>
   </div>
